src/styles/index.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

#root{
  display: flex;
  flex-direction: row;
  justify-content: center;
}



h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

.output{
  flex-grow: 1;
  background-color: lightgray;
}

.settings{
  background-color:antiquewhite;
  flex-grow: 1;
}

.resume{
  background-color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-inline: 20px;
  padding: 20px;
}

.resume > div{
  width: 100%
}

.resume h2{
  border-bottom: 2px black solid;
}

.header{
  display: flex;
  flex-direction: column;
  align-items: center;
}

.card > *{
  margin-block: 0;
}

.input div{
  margin-top: 10px;
}

